[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/detectors/PlayerDetector.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/levels/Door.gd" type="Script" id=2]
[ext_resource path="res://assets/interface/circle.png" type="Texture" id=3]
[ext_resource path="res://assets/objects/door.png" type="Texture" id=5]
[ext_resource path="res://src/objects/SwipeIndicator.tscn" type="PackedScene" id=7]

[node name="Door" type="Sprite" groups=["doors"]]
position = Vector2( 0, 1 )
texture = ExtResource( 5 )
hframes = 4
script = ExtResource( 2 )

[node name="Shadow" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.333333 )
show_behind_parent = true
texture = ExtResource( 3 )

[node name="PlayerDetector" parent="." instance=ExtResource( 1 )]

[node name="SwipeIndicator" parent="." instance=ExtResource( 7 )]

[connection signal="player_detected_from" from="PlayerDetector" to="." method="_on_PlayerDetector_player_detected_from"]
[connection signal="player_lost" from="PlayerDetector" to="." method="_on_PlayerDetector_player_lost"]
